[package]
name = "evemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.45"
eframe = "=0.28.1"
egui = "=0.28.1"
egui_extras = "=0.28.1"
ferrisetw = "1.2.0"
fuzzy-matcher = "0.3.7"
globset = "0.4"
parking_lot = "0.12.5"
rusqlite = { version = "=0.31.0", default-features = false, features = ["bundled", "backup"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.39"
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }
